--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,11 @@ main{
     padding-top: 10px;
     padding-left:240px;
     padding-right: 240px;
+    color: white;
 }
 .carusel{
     height: 500px;
     width: 500px;
     float: left;
 }
+
