Implementando galería fotográfica

--- a/css/style.css
+++ b/css/style.css
@@ -82,3 +82,10 @@ footer p{
     font-size: 100px;
     
 }
+
+.imagen{
+    height: 150px;
+    width: 150px;
+    margin-top: 50px;
+    margin-left: 50px;
+}
