--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,19 @@
-*{
-    background-color: #000000;
-    margin: 0;
-    padding: 0;
-}
 header{
+    background-color: black;
+    width: 100%;
     height: auto;
-    text-align:center;
+}
+header img{
+    justify-content: center;
+    display: flex;
+    margin-left: auto;
+  margin-right: auto;
 }
 nav{
+    background-color: black;
     text-align:center;
     padding-bottom: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 nav ul {
     list-style-type: none;
@@ -25,7 +29,7 @@ nav ul li {
 nav ul li a {
     text-decoration: none;
     color: rgb(175, 175, 175);
-    font-size: 25px;
+    font-size: 15px;
 }
 
 nav ul li a:hover {
@@ -34,7 +38,7 @@ nav ul li a:hover {
 
 nav ul li.active a {
     color: white;
-    font-size: 30px;
+    font-size: 22px;
     position: relative;
 }
 
@@ -49,43 +53,92 @@ nav ul li.active a::after {
     left: 0;
 }
 main{
+    background-color:black;
+    width: 100%;
     height: auto;
-    text-align: center;
-    padding-top: 10px;
-    padding-left:240px;
-    padding-right: 240px;
-    color: white;
 }
-.carusel{
-    height: 500px;
-    width: 500px;
+.home{
+    display: flex;
+    justify-content: center;
 }
-.nosotros{
-    font-size: 25px;
+.logo, .carusel{
+    height:400px;
+    width: 400px;
 }
 
-.catalogo{
-    height: 200px;  
-    width: 200px;
-}
-header img{
-    height: 150px;
-    width: 750px;
-}
 footer{
+    padding-top: 15px;
+    background-color: black;
     text-align: center;
-    padding-top: 20px;
-    height: 100px;
+    width: 100%;
+    height: 80px;
     color: white;
+    font-size: 8px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+footer a{
+    padding-right: 10px;
+    font-size: 10px;
+    color: white;
+    text-decoration: none;
 }
 footer p{
-    font-size: 100px;
-    
+    padding-top: 10px;
 }
 
-.imagen{
-    height: 150px;
-    width: 150px;
-    margin-top: 50px;
-    margin-left: 50px;
+.famoso{
+    display: flex;
+    justify-content: center;
+    height: auto;
+    flex-wrap: wrap;
 }
+.famoso img{
+    height: 200px;
+    width: 200px;
+}
+.famo{
+    padding-top: 50px;
+    text-align:center;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+}
+.nosotros{
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+.nosotros p{
+    font-size: 20px;
+}
+.nosotros video{
+    height: 360px;
+    width:  640px;
+}
+/*media query para pantallas mas pequeñas*/
+@media only screen and (max-width:768px){
+    .famoso img{
+        height: 100px;
+        width: 100px;
+    }
+    .logo, .carusel{
+        height:180px;
+        width: 180px;
+    }
+    .famo{
+        font-size: 20px;
+    }
+    .nosotros p{
+        font-size: 15px;
+    }
+    .nosotros video{
+        height: 240px;
+        width: 320px;
+    }
+    header img{
+        height: 80px;
+        width: 300px;
+    }
+}
+
+
