--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+*{
+    background-color: black;
+}
 header{
     background-color: black;
     width: 100%;
@@ -29,7 +32,7 @@ nav ul li {
 nav ul li a {
     text-decoration: none;
     color: rgb(175, 175, 175);
-    font-size: 15px;
+    font-size: 20px;
 }
 
 nav ul li a:hover {
@@ -38,7 +41,7 @@ nav ul li a:hover {
 
 nav ul li.active a {
     color: white;
-    font-size: 22px;
+    font-size: 25px;
     position: relative;
 }
 
