--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ nav ul li.active a::after {
     left: 0;
 }
 main{
+    border-bottom: 1px solid #ccc;
     background-color:black;
     width: 100%;
     height: auto;
@@ -70,7 +71,9 @@ main{
 }
 
 footer{
-    padding-top: 15px;
+    border-top: 1px solid #ccc;
+    padding-top: 30px;
+    margin-bottom: 30px;
     background-color: black;
     text-align: center;
     width: 100%;
@@ -94,6 +97,7 @@ footer p{
     justify-content: center;
     height: auto;
     flex-wrap: wrap;
+    padding-bottom: 30px;
 }
 .famoso img{
     height: 200px;
@@ -142,6 +146,7 @@ footer p{
         height: 80px;
         width: 300px;
     }
+
 }
 
 
