--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,17 @@ footer p{
 /*galeria de imagenes*/
 .titulo{
     color:white;
-    text-align:center; 
+    text-align:center;
+    padding-bottom: 15px; 
+}
+.titulo a{
+    text-decoration: none;
+    color: white;
+    
+}
+.titulo a:hover{
+    text-decoration: underline;
+    color: rgb(8, 220, 29);
 }
 .galeria{
     text-align:center;
